updated display of svg.vssue-icon due to layout issue

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -32,3 +32,7 @@ h2 {
 h3 {
   @apply text-xl font-semibold;
 }
+
+svg.vssue-icon {
+  display: inline-block;
+}
